--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -2,16 +2,21 @@
 
 :root {
   --max-width: 1100px;
+  --primary-medium: #3753b4;
+  --primary-light: #acbdf9;
+  --success: #4caf50;
+  --error: #f44336;
+  --warning: #ff9800;
+  --gray-medium: #9b9b9b;
+  --gray-light: #e0e0e0;
+  --text: #333;
+  --text-light: #616161;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-body {
-  font-family: "Oxanium", sans-serif;
 }
 
 html,
@@ -99,7 +104,8 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-weight: 400;
+  font-family: "Oxanium", sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -116,8 +122,42 @@ nav,
 section {
   display: block;
 }
+.main {
+  background-color: var(--primary-light);
+  color: var(--text);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+input {
+  font-family: "Oxanium", sans-serif;
+  border: none;
+  border-bottom: 1px solid var(--text);
+  background-color: transparent;
+}
+input:focus {
+  outline-offset: 4px;
+}
 body {
   line-height: 1;
+}
+button,
+.button {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: "Oxanium", sans-serif;
+  background-color: var(--primary-medium);
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
+button:disabled {
+  background-color: var(--gray-light);
+  color: var(--gray-medium);
+  cursor: not-allowed;
 }
 ol,
 ul {
