--- a/frontend/src/components/game/canvas/index.module.css
+++ b/frontend/src/components/game/canvas/index.module.css
@@ -1,7 +1,7 @@
 .canvas {
   background-color: rgb(255, 214, 135);
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .canvas > * {
