--- a/frontend/src/components/game/canvas/index.module.css
+++ b/frontend/src/components/game/canvas/index.module.css
@@ -2,6 +2,13 @@
   background-color: rgb(255, 214, 135);
   position: relative;
   overflow: hidden;
+  /* background-image: linear-gradient(
+      to right,
+      #ff8a8a80 0%,
+      #ff8a8a80 49.9%,
+      #8c9dff80 50.1%
+    ),
+    linear-gradient(to bottom, #ff8a8a80 0%, #ff8a8a80 49.9%, #8c9dff80 50.1%); */
 }
 
 .canvas > * {
