--- a/frontend/src/pages/join/index.module.css
+++ b/frontend/src/pages/join/index.module.css
@@ -31,14 +31,37 @@
 }
 
 .skinPanel{
-  background-color: red;
+  background-color: silver;
   position:fixed;
   top: 50%;
   left: 50%;
-  width: 100%;
+  width: 90%;
   max-width: 1300px;
   height: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
+  overflow-y: hidden;
+  border: 20px solid gray;
+}
+.skinList{
+  margin: 20px;
+  display: flex;
   
+}
+.skinItem{
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  flex-direction: column;
+  background-color: gray;
+  
+  text-align: center;
+}
+
+.skinItem h3{
+  margin-top: 5px;
+  padding: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: capitalize;
 }
