--- a/frontend/src/pages/join/index.module.css
+++ b/frontend/src/pages/join/index.module.css
@@ -1,17 +1,15 @@
 .container {
-  width: 90%;
-  max-width: 1200px;
+  width: 100%;
   padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
-  background-color: white;
 }
 
 .title {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .waysToJoin {
